; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_link_socket_update_buffer_sizes.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_link_socket_update_buffer_sizes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.link_socket = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @link_socket_update_buffer_sizes(%struct.link_socket* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.link_socket*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.link_socket* %0, %struct.link_socket** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.link_socket*, %struct.link_socket** %4, align 8
  %8 = icmp ne %struct.link_socket* %7, null
  br i1 %8, label %9, label %30

9:                                                ; preds = %3
  %10 = load %struct.link_socket*, %struct.link_socket** %4, align 8
  %11 = getelementptr inbounds %struct.link_socket, %struct.link_socket* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @socket_defined(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %30

15:                                               ; preds = %9
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.link_socket*, %struct.link_socket** %4, align 8
  %18 = getelementptr inbounds %struct.link_socket, %struct.link_socket* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store i32 %16, i32* %19, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.link_socket*, %struct.link_socket** %4, align 8
  %22 = getelementptr inbounds %struct.link_socket, %struct.link_socket* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  store i32 %20, i32* %23, align 4
  %24 = load %struct.link_socket*, %struct.link_socket** %4, align 8
  %25 = getelementptr inbounds %struct.link_socket, %struct.link_socket* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.link_socket*, %struct.link_socket** %4, align 8
  %28 = getelementptr inbounds %struct.link_socket, %struct.link_socket* %27, i32 0, i32 0
  %29 = call i32 @socket_set_buffers(i32 %26, %struct.TYPE_2__* %28)
  br label %30

30:                                               ; preds = %15, %9, %3
  ret void
}

declare dso_local i64 @socket_defined(i32) #1

declare dso_local i32 @socket_set_buffers(i32, %struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
